# BotTelegrammDialog

./: Bot.cpp  BotClass.cpp  BotClass.h  BotSettings.txt  CMakeLists.txt  README.md
BotReview/: BotReview.cpp  CMakeLists.txt  Event.cpp  Event.h
BotReview/Events/: Events.txt  Heh.txt
CMake/: CMakeLists.txt  clang-format.cmake
ForTD/: CMakeLists.txt  Makefile  PPForTD.cpp  PPForTD.h  TablTD.sql  cmake_install.cmake
LibDB/: CMakeLists.txt  DB.cpp  DB.h
SaveFile/: CMakeLists.txt  README.md  SaveFile.cpp  SaveFile.h
SaveFile/tests/: SaveFileTest.cpp
bottime/: BotTime.cpp  BotTime.h  CMakeLists.txt
dirVlad/: CMakeLists.txt  TableGuide.sql  bot_guide.cpp  bot_guide.h
